# UniShell

./: LICENSES_DEPENDENCIES.md  MANIFEST.in  PUBLISH.md  README.md  README.ru.md  docs.md  pyproject.toml  setup.py  test.py
.github/workflows/: python-publish.yml
FileAlchemy/: README.md  ViewPort.py  __init__.py  encoding_utils.py  unishell.py  unishell.pyi
FileAlchemy/Windows/: __init__.py  regedit.py
FileAlchemy/Windows/regedit/: AutoRun.py  AutoRunOnce.py  PATH.py  README.md  UserType.py  __init__.py  regedit.txt
FileAlchemy/_internal/: ViewPort.py  __init__.py
FileAlchemy/installer/: __init__.py
FileAlchemy/structures/: __init__.py  dir.py  file.py  files.py  stream.py
tests/: test_archive_extra.py  test_dir.py  test_encoding_utils.py  test_file_utils.py  test_integration.py  test_stream_and_file.py  test_windows_installer.py  test_winregex_impl.py
tests/autogenerated/: test_archive_edge_cases.py  test_archive_performance.py  test_windows_installer.py
tests/habr/: test.py
unishell/: LICENSE  __init__.py  pyproject.toml  regedit.py
unishell/_internal/: __init__.py  encoding_utils.py  funcs.py
unishell/_internal/structures/: file.py
unishell/unishell/: regedit.py
unishell/unishell/_internal/structures/: __init__.py  archive.py  dir.py
unishell_unix/: pyproject.toml
unishell_win/: pyproject.toml
unishell_win/regedit/: __init__.py
unishell_win/unishell_win/: __init__.py
unishell_win/unishell_win/regedit/: README.md  UserType.py  __init__.py
unishell_win/unishell_win/regedit/core/: AutoRun.py  AutoRunOnce.py  PATH.py  Regedit.py  UserType.py  core.py  reg_types.py
