[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unishell"
version = "2.2.1"
description = "Core cross-platform Python library for filesystem operations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "GimpNiK"}
]

keywords = [
    "file",
    "directory",
    "archive",
    "encoding",
    "filesystem",
    "windows",
    "registry",
    "shell",
    "unix",
    "cmd"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
]

dependencies = [
    "unishell_win >= 2.2.1",
    "unishell_unix >= 2.2.1"
]

[project.optional-dependencies]

[project.urls]
Homepage = "https://github.com/GimpNiK/UniShell"
Documentation = "https://github.com/GimpNiK/UniShell"
Repository = "https://github.com/GimpNiK/UniShell"
Issues = "https://github.com/GimpNiK/UniShell/issues"

[tool.setuptools]
packages = {find = {}}